word-to-pdf-converter-backend/gateway/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec: 
  selector:
    app: gateway
  type: ClusterIP
  ports:
   - port: 8081
     targetPort: 8081
     protocol: TCP
