word-to-pdf-converter-backend/gateway/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: mp3converter.com
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
            service:
              name: gateway
              port:
                number: 8081
